--- a/preon/examples/cancer_type_normalization.ipynb
+++ b/preon/examples/cancer_type_normalization.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "from preon.normalization import PrecisionOncologyNormalizer\n",
-    "from preon.cancer import load_do_cancers, load_do_flat_mapping, apply_do_flat_mapping_to_ontology, apply_do_flat_mapping_to_goldstandard, \\\n",
+    "from preon.cancer import download_or_load_do_cancers, load_do_flat_mapping, apply_do_flat_mapping_to_ontology, apply_do_flat_mapping_to_goldstandard, \\\n",
     "    load_database_cancer_goldstandard, load_ncbi_cancer_goldstandard\n",
     "from preon.tests.utils import f1_score"
    ]
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cancer_types, doids = load_do_cancers()\n",
+    "cancer_types, doids = download_or_load_do_cancers()\n",
     "\n",
     "# reduce the cancer type hierachy to just two levels\n",
     "do_flat_mapping = load_do_flat_mapping()\n",
