Added true negatives to NCBI.

--- a/preon/examples/cancer_type_normalization.ipynb
+++ b/preon/examples/cancer_type_normalization.ipynb
@@ -100,7 +100,7 @@
      "output_type": "stream",
      "text": [
       "database: f1_score=0.934131736526946\n",
-      "ncbi: f1_score=0.8208955223880596\n"
+      "ncbi: f1_score=0.7382550335570469\n"
      ]
     }
    ],
@@ -132,9 +132,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['carcinoma'], [['DOID:0050687', 'DOID:305']], {'match_type': 'exact'})"
-      ]
+      "text/plain": "(['carcinoma'], [['DOID:0050687', 'DOID:305']], {'match_type': 'exact'})"
      },
      "execution_count": 7,
      "metadata": {},
@@ -161,11 +159,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['carcinoma', 'sarcoma'],\n",
-       " [['DOID:0050687', 'DOID:305'], ['DOID:0050687', 'DOID:1115']],\n",
-       " {'match_type': 'substring'})"
-      ]
+      "text/plain": "(['carcinoma', 'sarcoma'],\n [['DOID:0050687', 'DOID:305'], ['DOID:0050687', 'DOID:1115']],\n {'match_type': 'substring'})"
      },
      "execution_count": 8,
      "metadata": {},
@@ -192,11 +186,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(['mesenchymalcellneoplasm'],\n",
-       " [['DOID:0050687', 'DOID:3350']],\n",
-       " {'match_type': 'partial', 'edit_distance': 0.08695652173913043})"
-      ]
+      "text/plain": "(['mesenchymalcellneoplasm'],\n [['DOID:0050687', 'DOID:3350']],\n {'match_type': 'partial', 'edit_distance': 0.08695652173913043})"
      },
      "execution_count": 9,
      "metadata": {},
@@ -251,180 +241,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Found Names</th>\n",
-       "      <th>Found Name IDs</th>\n",
-       "      <th>Match Type</th>\n",
-       "      <th>Edit Distance</th>\n",
-       "      <th>Query Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Multiple myeloma</td>\n",
-       "      <td>[multiplemyeloma]</td>\n",
-       "      <td>[[DOID:0050686, DOID:2531]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Medulloblastoma</td>\n",
-       "      <td>[medulloblastoma]</td>\n",
-       "      <td>[[DOID:0050686, DOID:3093]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mantle cell lymphoma</td>\n",
-       "      <td>[mantlecelllymphoma]</td>\n",
-       "      <td>[[DOID:0050686, DOID:0060083, DOID:2531]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>multiple myeloma</td>\n",
-       "      <td>[multiplemyeloma]</td>\n",
-       "      <td>[[DOID:0050686, DOID:2531]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000796</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Colorectal Cancer</td>\n",
-       "      <td>[colorectalcancer]</td>\n",
-       "      <td>[[DOID:0050686, DOID:3119]]</td>\n",
-       "      <td>exact</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>Thrombotic Thrombocytopenic Purpura (TTP)</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[[None]]</td>\n",
-       "      <td>none</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.012495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Vasodilatory Shock</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[[None]]</td>\n",
-       "      <td>none</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.007559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>All Tumors</td>\n",
-       "      <td>[all]</td>\n",
-       "      <td>[[DOID:0050686, DOID:2531]]</td>\n",
-       "      <td>substring</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>Anemia</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[[None]]</td>\n",
-       "      <td>none</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.005533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>NOS</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[[None]]</td>\n",
-       "      <td>none</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.004310</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>133 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          Name           Found Names  \\\n",
-       "0                             Multiple myeloma     [multiplemyeloma]   \n",
-       "1                              Medulloblastoma     [medulloblastoma]   \n",
-       "2                         Mantle cell lymphoma  [mantlecelllymphoma]   \n",
-       "3                             multiple myeloma     [multiplemyeloma]   \n",
-       "4                            Colorectal Cancer    [colorectalcancer]   \n",
-       "..                                         ...                   ...   \n",
-       "128  Thrombotic Thrombocytopenic Purpura (TTP)                    []   \n",
-       "129                         Vasodilatory Shock                    []   \n",
-       "130                                 All Tumors                 [all]   \n",
-       "131                                     Anemia                    []   \n",
-       "132                                        NOS                    []   \n",
-       "\n",
-       "                                Found Name IDs Match Type  Edit Distance  \\\n",
-       "0                  [[DOID:0050686, DOID:2531]]      exact            NaN   \n",
-       "1                  [[DOID:0050686, DOID:3093]]      exact            NaN   \n",
-       "2    [[DOID:0050686, DOID:0060083, DOID:2531]]      exact            NaN   \n",
-       "3                  [[DOID:0050686, DOID:2531]]      exact            NaN   \n",
-       "4                  [[DOID:0050686, DOID:3119]]      exact            NaN   \n",
-       "..                                         ...        ...            ...   \n",
-       "128                                   [[None]]       none            NaN   \n",
-       "129                                   [[None]]       none            NaN   \n",
-       "130                [[DOID:0050686, DOID:2531]]  substring            NaN   \n",
-       "131                                   [[None]]       none            NaN   \n",
-       "132                                   [[None]]       none            NaN   \n",
-       "\n",
-       "     Query Time  \n",
-       "0      0.000303  \n",
-       "1      0.000190  \n",
-       "2      0.000511  \n",
-       "3      0.000796  \n",
-       "4      0.000097  \n",
-       "..          ...  \n",
-       "128    0.012495  \n",
-       "129    0.007559  \n",
-       "130    0.000078  \n",
-       "131    0.005533  \n",
-       "132    0.004310  \n",
-       "\n",
-       "[133 rows x 6 columns]"
-      ]
+      "text/plain": "                                          Name           Found Names  \\\n0                             Multiple myeloma     [multiplemyeloma]   \n1                              Medulloblastoma     [medulloblastoma]   \n2                         Mantle cell lymphoma  [mantlecelllymphoma]   \n3                             multiple myeloma     [multiplemyeloma]   \n4                            Colorectal Cancer    [colorectalcancer]   \n..                                         ...                   ...   \n128  Thrombotic Thrombocytopenic Purpura (TTP)                    []   \n129                         Vasodilatory Shock                    []   \n130                                 All Tumors                 [all]   \n131                                     Anemia                    []   \n132                                        NOS                    []   \n\n                                Found Name IDs Match Type  Edit Distance  \\\n0                  [[DOID:0050686, DOID:2531]]      exact            NaN   \n1                  [[DOID:0050686, DOID:3093]]      exact            NaN   \n2    [[DOID:0050686, DOID:0060083, DOID:2531]]      exact            NaN   \n3                  [[DOID:0050686, DOID:2531]]      exact            NaN   \n4                  [[DOID:0050686, DOID:3119]]      exact            NaN   \n..                                         ...        ...            ...   \n128                                   [[None]]       none            NaN   \n129                                   [[None]]       none            NaN   \n130                [[DOID:0050686, DOID:2531]]  substring            NaN   \n131                                   [[None]]       none            NaN   \n132                                   [[None]]       none            NaN   \n\n     Query Time  \n0      0.001279  \n1      0.000224  \n2      0.000099  \n3      0.000091  \n4      0.000252  \n..          ...  \n128    0.011714  \n129    0.007292  \n130    0.000075  \n131    0.004495  \n132    0.003879  \n\n[133 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.001279</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Medulloblastoma</td>\n      <td>[medulloblastoma]</td>\n      <td>[[DOID:0050686, DOID:3093]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000224</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Mantle cell lymphoma</td>\n      <td>[mantlecelllymphoma]</td>\n      <td>[[DOID:0050686, DOID:0060083, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000099</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000091</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Colorectal Cancer</td>\n      <td>[colorectalcancer]</td>\n      <td>[[DOID:0050686, DOID:3119]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000252</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>128</th>\n      <td>Thrombotic Thrombocytopenic Purpura (TTP)</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.011714</td>\n    </tr>\n    <tr>\n      <th>129</th>\n      <td>Vasodilatory Shock</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.007292</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>All Tumors</td>\n      <td>[all]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>substring</td>\n      <td>NaN</td>\n      <td>0.000075</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>Anemia</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.004495</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>NOS</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.003879</td>\n    </tr>\n  </tbody>\n</table>\n<p>133 rows × 6 columns</p>\n</div>"
      },
      "execution_count": 11,
      "metadata": {},
