--- a/preon/examples/drugbank_mesh_evaluation.ipynb
+++ b/preon/examples/drugbank_mesh_evaluation.ipynb
@@ -22,20 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "figured-parish",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abdominal Neoplasms', 'Plasmablastic Lymphoma', 'Mammary Analogue Secretory Carcinoma', 'Unilateral Breast Neoplasms', 'Giant Cell Tumor of Tendon Sheath']\n",
+      "['MESH:D000008', 'MESH:D000069293', 'MESH:D000069295', 'MESH:D000069584', 'MESH:D000070779']\n"
+     ]
+    }
+   ],
    "source": [
     "from preon.normalization import PrecisionOncologyNormalizer\n",
     "from preon.drug import load_drugbank_drugs, load_charite_drug_goldstandard, load_database_drug_goldstandard, load_ctg_drug_goldstandard\n",
-    "from preon.cancer import download_or_load_mesh_desc, load_database_cancer_goldstandard, load_ncbi_cancer_goldstandard\n",
+    "from preon.cancer import download_or_load_mesh_cancers, load_database_cancer_goldstandard, load_ncbi_cancer_goldstandard\n",
     "from preon.tests.utils import precision_score, recall_score, f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "younger-opinion",
    "metadata": {},
    "outputs": [],
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "fd13acb3",
    "metadata": {},
    "outputs": [],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "4a6813e0",
    "metadata": {},
    "outputs": [],
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "0ab58b3b",
    "metadata": {},
    "outputs": [
@@ -119,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "pediatric-cross",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cancer_types, mesh_ids = download_or_load_mesh_desc()\n",
+    "cancer_types, mesh_ids = download_or_load_mesh_cancers()\n",
     "normalizer = PrecisionOncologyNormalizer().fit(cancer_types, mesh_ids)"
    ]
   },
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "sized-parallel",
    "metadata": {},
    "outputs": [],
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "mighty-damages",
    "metadata": {},
    "outputs": [
@@ -159,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "database: precision_score=0.28 recall_score=0.71 f1_score=0.4\n",
-      "ncbi: precision_score=0.07 recall_score=0.46 f1_score=0.12\n"
+      "database: precision_score=0.36 recall_score=0.57 f1_score=0.44\n",
+      "ncbi: precision_score=0.45 recall_score=0.34 f1_score=0.39\n"
      ]
     }
    ],
