Added user warnings to preon.

--- a/preon/examples/drugbank_mesh_evaluation.ipynb
+++ b/preon/examples/drugbank_mesh_evaluation.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "drug_names, db_ids = load_drugbank_drugs()\n",
-    "normalizer = PrecisionOncologyNormalizer().fit(drug_names, db_ids)"
+    "normalizer = PrecisionOncologyNormalizer(enable_warnings=False).fit(drug_names, db_ids)"
    ]
   },
   {
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "charite: precision_score=0.97 recall_score=0.76 f1_score=0.85\n",
+      "charite: precision_score=0.95 recall_score=0.76 f1_score=0.85\n",
       "database: precision_score=1.0 recall_score=0.94 f1_score=0.97\n",
       "ctg: precision_score=0.97 recall_score=0.88 f1_score=0.92\n"
      ]
@@ -119,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "pediatric-cross",
    "metadata": {},
    "outputs": [],
    "source": [
     "cancer_types, mesh_ids = download_or_load_mesh_cancers()\n",
-    "normalizer = PrecisionOncologyNormalizer().fit(cancer_types, mesh_ids)"
+    "normalizer = PrecisionOncologyNormalizer(enable_warnings=False).fit(cancer_types, mesh_ids)"
    ]
   },
   {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "sized-parallel",
    "metadata": {},
    "outputs": [],
@@ -151,9 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "mighty-damages",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
