--- a/preon/examples/cancer_type_normalization.ipynb
+++ b/preon/examples/cancer_type_normalization.ipynb
@@ -11,9 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "native-jurisdiction",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:12.732114Z",
+     "start_time": "2023-12-11T15:35:12.685484Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -22,11 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "figured-parish",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:12.735538Z",
+     "start_time": "2023-12-11T15:35:12.689812Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "import logging\n",
     "from preon.normalization import PrecisionOncologyNormalizer\n",
     "from preon.cancer import download_or_load_do_cancers, load_do_flat_mapping, apply_do_flat_mapping_to_ontology, apply_do_flat_mapping_to_goldstandard, \\\n",
     "    load_database_cancer_goldstandard, load_ncbi_cancer_goldstandard\n",
@@ -35,9 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "younger-opinion",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:12.736684Z",
+     "start_time": "2023-12-11T15:35:12.693143Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -54,9 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "pediatric-cross",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:14.542142Z",
+     "start_time": "2023-12-11T15:35:12.696836Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cancer_types, doids = download_or_load_do_cancers()\n",
@@ -78,9 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "sized-parallel",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:14.546676Z",
+     "start_time": "2023-12-11T15:35:14.543384Z"
+    }
+   },
    "outputs": [],
    "source": [
     "goldstandards = [\n",
@@ -91,16 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "id": "mighty-damages",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:40.058488Z",
+     "start_time": "2023-12-11T15:35:14.545961Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "database: f1_score=0.9404761904761905\n",
-      "ncbi: f1_score=0.7389830508474577\n"
+      "database: f1_score=0.9461077844311376\n",
+      "ncbi: f1_score=0.7432432432432433\n"
      ]
     }
    ],
@@ -126,15 +157,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "# print warnings (default)\n",
+    "logging.captureWarnings(False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:40.058621Z",
+     "start_time": "2023-12-11T15:35:40.055895Z"
+    }
+   },
+   "id": "23dd83c61d4b1ec5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "cancer_types, doids = download_or_load_do_cancers()\n",
+    "\n",
+    "# reduce the cancer type hierachy to just two levels\n",
+    "do_flat_mapping = load_do_flat_mapping()\n",
+    "cancer_types, doids = apply_do_flat_mapping_to_ontology(cancer_types, doids, do_flat_mapping)\n",
+    "\n",
+    "normalizer = PrecisionOncologyNormalizer().fit(cancer_types, doids)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.751209Z",
+     "start_time": "2023-12-11T15:35:40.058101Z"
+    }
+   },
+   "id": "f6167e6372665544"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "mechanical-circus",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.756047Z",
+     "start_time": "2023-12-11T15:35:41.752032Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['carcinoma'], [['DOID:0050687', 'DOID:305']], {'match_type': 'exact'})"
      },
-     "execution_count": 7,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,15 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "id": "central-domestic",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.757338Z",
+     "start_time": "2023-12-11T15:35:41.754994Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['carcinoma', 'sarcoma'],\n [['DOID:0050687', 'DOID:305'], ['DOID:0050687', 'DOID:1115']],\n {'match_type': 'substring'})"
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,21 +260,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "id": "stone-walter",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.801314Z",
+     "start_time": "2023-12-11T15:35:41.780102Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": "(['mesenchymalcellneoplasm'],\n [['DOID:0050687', 'DOID:3350']],\n {'match_type': 'partial', 'edit_distance': 0.087})"
      },
-     "execution_count": 9,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalizer.query(\"mesenchimal zell neoplasm\", n_grams=2)"
+    "normalizer.query(\"mesenchimal zell neoplasm\")"
    ]
   },
   {
@@ -206,19 +291,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ermshaua/Documents/Git/public/preon/preon/normalization.py:50: UserWarning: Cannot match cell type cancer bladder to reference data. Try changing the partial matching threshold or number of n-grams.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "normalizer.query(\"cell type cancer bladder\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.805899Z",
+     "start_time": "2023-12-11T15:35:41.804121Z"
+    }
+   },
+   "id": "5782b9680191201a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If preon cannot find a match, it warns the user and suggests hyper-parameter changes. In this case, we increase the number of n-grams to 3 and get a valid result."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2a7b3b013c9fc16f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(['celltypecancer'], [['DOID:0050687']], {'match_type': 'substring'})"
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.query(\"cell type cancer bladder\", n_grams=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.810206Z",
+     "start_time": "2023-12-11T15:35:41.808335Z"
+    }
+   },
+   "id": "7a55b64a4ccaa189"
+  },
+  {
    "cell_type": "markdown",
    "id": "suspected-blanket",
    "metadata": {},
    "source": [
     "# Data Integration\n",
-    "We use preon in the PREDICT project to integrate cancer types from different sources. Going on, we provide an overview how to do so."
+    "We use preon in the PREDICT project to integrate cancer types from different sources. Going on, we provide an overview how to do so. For this example, we write issued warnings to a log file for inspection."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
+   "outputs": [],
+   "source": [
+    "# store warnings in file\n",
+    "logging.basicConfig(filename='warnings.log', level=logging.WARNING)\n",
+    "logging.captureWarnings(True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:41.813773Z",
+     "start_time": "2023-12-11T15:35:41.810575Z"
+    }
+   },
+   "id": "ae0468c8c172d53"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "outputs": [],
+   "source": [
+    "cancer_types, doids = download_or_load_do_cancers()\n",
+    "\n",
+    "# reduce the cancer type hierachy to just two levels\n",
+    "do_flat_mapping = load_do_flat_mapping()\n",
+    "cancer_types, doids = apply_do_flat_mapping_to_ontology(cancer_types, doids, do_flat_mapping)\n",
+    "\n",
+    "normalizer = PrecisionOncologyNormalizer().fit(cancer_types, doids)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:43.592643Z",
+     "start_time": "2023-12-11T15:35:41.812995Z"
+    }
+   },
+   "id": "970c94631118be09"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "competitive-daniel",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:43.643355Z",
+     "start_time": "2023-12-11T15:35:43.592775Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_names, _, _ = load_database_cancer_goldstandard()\n",
@@ -235,16 +425,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "id": "exceptional-sight",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:35:44.602497Z",
+     "start_time": "2023-12-11T15:35:43.650177Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "                       Name             Found Names  \\\n0                      ADCC                      []   \n1                        FH                      []   \n2                       LIP                      []   \n3                      PLEN                      []   \n4                        RA                      []   \n..                      ...                     ...   \n128  Acute Myeloid Leukemia  [acutemyeloidleukemia]   \n129                     CRC                      []   \n130       Colorectal Cancer      [colorectalcancer]   \n131        Multiple myeloma       [multiplemyeloma]   \n132        multiple myeloma       [multiplemyeloma]   \n\n                  Found Name IDs Match Type  Edit Distance  Query Time  \n0                       [[None]]       none            NaN    0.022404  \n1                       [[None]]       none            NaN    0.011238  \n2                       [[None]]       none            NaN    0.011906  \n3                       [[None]]       none            NaN    0.014206  \n4                       [[None]]       none            NaN    0.016465  \n..                           ...        ...            ...         ...  \n128  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000042  \n129                     [[None]]       none            NaN    0.014032  \n130  [[DOID:0050686, DOID:3119]]      exact            NaN    0.000067  \n131  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000031  \n132  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000024  \n\n[133 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ADCC</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.022404</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>FH</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.011238</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LIP</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.011906</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PLEN</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.014206</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RA</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.016465</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>128</th>\n      <td>Acute Myeloid Leukemia</td>\n      <td>[acutemyeloidleukemia]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000042</td>\n    </tr>\n    <tr>\n      <th>129</th>\n      <td>CRC</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.014032</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>Colorectal Cancer</td>\n      <td>[colorectalcancer]</td>\n      <td>[[DOID:0050686, DOID:3119]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000067</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>Multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000031</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000024</td>\n    </tr>\n  </tbody>\n</table>\n<p>133 rows × 6 columns</p>\n</div>"
+      "text/plain": "                       Name             Found Names  \\\n0                      ADCC                      []   \n1                        FH                      []   \n2                       LIP                      []   \n3                      PLEN                      []   \n4                        RA                      []   \n..                      ...                     ...   \n128  Acute Myeloid Leukemia  [acutemyeloidleukemia]   \n129                     CRC                      []   \n130       Colorectal Cancer      [colorectalcancer]   \n131        Multiple myeloma       [multiplemyeloma]   \n132        multiple myeloma       [multiplemyeloma]   \n\n                  Found Name IDs Match Type  Edit Distance  Query Time  \n0                       [[None]]       none            NaN    0.007046  \n1                       [[None]]       none            NaN    0.004465  \n2                       [[None]]       none            NaN    0.005546  \n3                       [[None]]       none            NaN    0.006043  \n4                       [[None]]       none            NaN    0.004501  \n..                           ...        ...            ...         ...  \n128  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000009  \n129                     [[None]]       none            NaN    0.005004  \n130  [[DOID:0050686, DOID:3119]]      exact            NaN    0.000011  \n131  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000008  \n132  [[DOID:0050686, DOID:2531]]      exact            NaN    0.000007  \n\n[133 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Name</th>\n      <th>Found Names</th>\n      <th>Found Name IDs</th>\n      <th>Match Type</th>\n      <th>Edit Distance</th>\n      <th>Query Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ADCC</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.007046</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>FH</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.004465</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LIP</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.005546</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PLEN</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.006043</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RA</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.004501</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>128</th>\n      <td>Acute Myeloid Leukemia</td>\n      <td>[acutemyeloidleukemia]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000009</td>\n    </tr>\n    <tr>\n      <th>129</th>\n      <td>CRC</td>\n      <td>[]</td>\n      <td>[[None]]</td>\n      <td>none</td>\n      <td>NaN</td>\n      <td>0.005004</td>\n    </tr>\n    <tr>\n      <th>130</th>\n      <td>Colorectal Cancer</td>\n      <td>[colorectalcancer]</td>\n      <td>[[DOID:0050686, DOID:3119]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000011</td>\n    </tr>\n    <tr>\n      <th>131</th>\n      <td>Multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000008</td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>multiple myeloma</td>\n      <td>[multiplemyeloma]</td>\n      <td>[[DOID:0050686, DOID:2531]]</td>\n      <td>exact</td>\n      <td>NaN</td>\n      <td>0.000007</td>\n    </tr>\n  </tbody>\n</table>\n<p>133 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,9 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "id": "chubby-induction",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:36:10.278996Z",
+     "start_time": "2023-12-11T15:35:44.625567Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_df = normalizer.transform(db_names)\n",
@@ -285,9 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "id": "printable-wealth",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T15:36:10.283123Z",
+     "start_time": "2023-12-11T15:36:10.279594Z"
+    }
+   },
    "outputs": [],
    "source": [
     "db_names, db_ids = db_df.Name.tolist(), db_df[\"Found Name IDs\"].tolist()\n",
